remove bounce and fix overflow

--- a/src/styles/globals.sass
+++ b/src/styles/globals.sass
@@ -1,11 +1,13 @@
 @use './vars.sass'
 @use './_mixins.sass' as mixins
 
-// html, body, #__next, main
-//   overscroll-behavior: none
-  // &::-webkit-scrollbar 
-  //   display: none
-  //   scrollbar-width: none
+html, body, #__next, main
+  overscroll-behavior: none
+  max-width: 100vw
+  overflow-x: hidden
+  &::-webkit-scrollbar
+    display: none
+    scrollbar-width: none
 
 html
   scroll-behavior: smooth
